{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 1010,
  "lineage": "3254d0c9-a0ad-f7ba-a6f0-f57512f7a173",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0249d3444ddcf55e3",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-52-209-200-211.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.209.200.211",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.vpc_lambda"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:077320249407:internet-gateway/igw-0e133554ad6371a5f",
            "id": "igw-0e133554ad6371a5f",
            "owner_id": "077320249407",
            "vpc_id": "vpc-0324732bbba878848"
          },
          "dependencies": [
            "aws_vpc.vpc_lambda"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0249d3444ddcf55e3",
            "connectivity_type": "public",
            "id": "nat-06b3f8d58ab4b505f",
            "network_interface_id": "eni-0cec78dba6a6f717a",
            "private_ip": "10.99.3.238",
            "public_ip": "52.209.200.211",
            "subnet_id": "subnet-04cf43514f7bc01e8"
          },
          "dependencies": [
            "aws_eip.ip",
            "aws_internet_gateway.default",
            "aws_subnet.public_lambda",
            "aws_vpc.vpc_lambda"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e133554ad6371a5f",
            "id": "r-rtb-0080d68bdd8f8172d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0080d68bdd8f8172d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.vpc_lambda"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01e8c0f2a39c194e71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06b3f8d58ab4b505f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01e8c0f2a39c194e7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ip",
            "aws_internet_gateway.default",
            "aws_nat_gateway.nat_lambda",
            "aws_route_table.privatert_lambda",
            "aws_subnet.public_lambda",
            "aws_vpc.vpc_lambda"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privatert_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:077320249407:route-table/rtb-01e8c0f2a39c194e7",
            "id": "rtb-01e8c0f2a39c194e7",
            "owner_id": "077320249407",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0324732bbba878848"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_lambda"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053814bda0f1edf74",
            "route_table_id": "rtb-01e8c0f2a39c194e7",
            "subnet_id": "subnet-0840942300a1f91d0"
          },
          "dependencies": [
            "aws_route_table.privatert_lambda",
            "aws_subnet.private_lambda",
            "aws_vpc.vpc_lambda"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02515245d40b8daf4",
            "route_table_id": "rtb-01e8c0f2a39c194e7",
            "subnet_id": "subnet-09ab82d98c51759d8"
          },
          "dependencies": [
            "aws_route_table.privatert_lambda",
            "aws_subnet.private_lambda",
            "aws_vpc.vpc_lambda"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ffdc22f13212ed93",
            "route_table_id": "rtb-01e8c0f2a39c194e7",
            "subnet_id": "subnet-0af34de2909dae798"
          },
          "dependencies": [
            "aws_route_table.privatert_lambda",
            "aws_subnet.private_lambda",
            "aws_vpc.vpc_lambda"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lamda-efs-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:077320249407:security-group/sg-0ce86dc1300d211a2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ce86dc1300d211a2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "Lambda_EFS_SG",
            "name_prefix": "",
            "owner_id": "077320249407",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0324732bbba878848"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_lambda"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:077320249407:subnet/subnet-0840942300a1f91d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.99.0.0/24",
            "id": "subnet-0840942300a1f91d0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "077320249407",
            "vpc_id": "vpc-0324732bbba878848"
          },
          "dependencies": [
            "aws_vpc.vpc_lambda"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:077320249407:subnet/subnet-09ab82d98c51759d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.99.1.0/24",
            "id": "subnet-09ab82d98c51759d8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "077320249407",
            "vpc_id": "vpc-0324732bbba878848"
          },
          "dependencies": [
            "aws_vpc.vpc_lambda"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:077320249407:subnet/subnet-0af34de2909dae798",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.99.2.0/24",
            "id": "subnet-0af34de2909dae798",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "077320249407",
            "vpc_id": "vpc-0324732bbba878848"
          },
          "dependencies": [
            "aws_vpc.vpc_lambda"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:077320249407:subnet/subnet-04cf43514f7bc01e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.99.3.0/24",
            "id": "subnet-04cf43514f7bc01e8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "077320249407",
            "vpc_id": "vpc-0324732bbba878848"
          },
          "dependencies": [
            "aws_vpc.vpc_lambda"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:077320249407:subnet/subnet-0fadffe08dec5742c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.99.4.0/24",
            "id": "subnet-0fadffe08dec5742c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "077320249407",
            "vpc_id": "vpc-0324732bbba878848"
          },
          "dependencies": [
            "aws_vpc.vpc_lambda"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:077320249407:subnet/subnet-07f9f07a224be2def",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.99.5.0/24",
            "id": "subnet-07f9f07a224be2def",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "077320249407",
            "vpc_id": "vpc-0324732bbba878848"
          },
          "dependencies": [
            "aws_vpc.vpc_lambda"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:077320249407:vpc/vpc-0324732bbba878848",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.99.0.0/16",
            "default_network_acl_id": "acl-0e3e5e5e640ceeb63",
            "default_route_table_id": "rtb-0080d68bdd8f8172d",
            "default_security_group_id": "sg-0bd25a6d775f13ef3",
            "dhcp_options_id": "dopt-0b811d6e1b2b06db9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0324732bbba878848",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0080d68bdd8f8172d",
            "owner_id": "077320249407"
          }
        }
      ]
    }
  ]
}